cross-browser issues SQUASHED

--- a/less/components/check-points.less
+++ b/less/components/check-points.less
@@ -17,7 +17,7 @@
   content: "";
   position: absolute;
   left: -32px;
-  top: -5px;
+  top: 0;
   width: 23px;
   height: 25px;
   background: @checkpoints-bullet-img;
