--- a/less/forms.less
+++ b/less/forms.less
@@ -37,7 +37,7 @@ input, textarea {
   font-size: @input-font-size;
 }
 
-form:not(.form-vertical) .form-group {
+.form-group {
   display: inline-block;
   width: @input-width;
   margin-left: @gutter-width / 4;
@@ -68,7 +68,11 @@ form:not(.form-vertical) .form-group {
     line-height: @line-height-small;
   }
 }
+
 .form-vertical .form-group {
+  display: block;
+  width: auto;
+  margin-left: 0;
   margin-top: 14px;
 
   &:first-child {
