--- a/less/variables.less
+++ b/less/variables.less
@@ -134,7 +134,7 @@
 
 // Check Points
 ///////////////////////////////////////////////////
-@checkpoints-bullet-img:    url('../img/checkpoints-bullet.svg');
+@checkpoints-bullet-img:    url('../img/checkpoints-bullet.png') no-repeat;
 
 // Page Sections
 ///////////////////////////////////////////////////
